<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NewStyle"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/tv_calculator_title3"
        android:layout_width="129dp"
        android:layout_height="75dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_calculator_titlenewer"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_calculation_result2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <TextView
        android:id="@+id/tv_calculator_title2"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_calculator_titlenew"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_calculation_result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/tv_calculation_result2"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="168dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:hint="@string/tv_calculation_result2"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_run_formula"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_run_formula"
        app:layout_constraintTop_toBottomOf="@+id/btn_run_formula" />

    <Button
        android:id="@+id/btn_calculator_back_menu"
        android:layout_width="86dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/btn_calculator_back_menu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calculator_title"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_calculator_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="199dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:hint="@string/et_revenue"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tv_calculator_title"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="@+id/tv_calculator_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculator_title" />

    <EditText
        android:id="@+id/et_width"
        android:layout_width="201dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:hint="@string/et_expenses"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/et_height"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_height"
        app:layout_constraintTop_toBottomOf="@+id/et_height" />

    <Button
        android:id="@+id/btn_run_formula"
        android:layout_width="184dp"
        android:layout_height="77dp"
        android:layout_marginStart="184dp"

        android:layout_marginLeft="184dp"
        android:text="@string/btn_run_formula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_calculation_result"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:hint="@string/tv_calculation_result"
        android:longClickable="false"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_run_formula"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_run_formula"
        app:layout_constraintTop_toBottomOf="@+id/btn_run_formula" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>